<resources>
    <string name="app_name">Forgot_Password</string>
    <string name="todo">TODO</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="password_reset_TV">Enter your Email for resetting your password</string>
    <string name="email">Email</string>
    <string name="submit">Submit</string>
    <string name="title_activity_main2">MainActivity2</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="otp">OTP</string>
    <string name="enter_the_otp">Enter the OTP</string>
    <string name="lock">Lock</string>
    <string name="home">Home</string>
    <string name="change_password">Change Password</string>
    <string name="spinner">Spinner</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="agreement">I agree the terms and conditions.</string>
    <string name="clear_pad">Clear Pad</string>
    <string name="save_signature">Save Signature</string>
    <string name="ch">CH</string>
    <string name="convert">Convert</string>

</resources>