<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".opt_check">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginHorizontal="35dp"
        android:layout_marginVertical="35dp">

    <ImageView
        android:layout_gravity="center"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="30dp"
        android:src="@drawable/otp"
        android:contentDescription="@string/todo" />

    <TextView
        android:layout_marginTop="50dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/otp"
        android:layout_gravity="center"
        android:textSize="40sp"
        android:autoSizeTextType="uniform"
        android:textStyle="bold"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_the_otp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:autoSizeTextType="uniform"
        android:textSize="20sp"/>

        <com.goodiebag.pinview.Pinview
            android:id="@+id/otpid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cursorVisible="true"
            app:inputType="number"
            app:pinWidth="40dp"
            android:minHeight="40dp"
            app:forceKeyboard="false"
            android:layout_gravity="center"
            app:password="true"
            app:splitWidth="10dp"
            app:pinLength="6"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/submit_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:backgroundTint="@color/purple_200"
            android:textColor="@color/black"
            android:minWidth="1000dp"
            android:layout_gravity="center"
            android:text="@string/submit"/>

    </LinearLayout>

</ScrollView>